@@ -279,7 +279,7 @@ class TestGetStatus(object):
         assert [] == t1.dep_changed
 
         os.stat_float_times(True) # for python2.4
-        time.sleep(0.01) # required otherwise timestamp is not modified!
+        time.sleep(1) # required otherwise timestamp is not modified!
         # a small change on the file
         ff = open(filePath,"a")
         ff.write(" part2")
